<resources>
    <string name="app_name">Playlist maker</string>
    <string name="main_settings">Настройки</string>
    <string name="main_media">Медиатека</string>
    <string name="main_search">Поиск</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_themes">Темная тема</string>
    <string name="settings_help">Написать в поддержку</string>
    <string name="settings_agreement">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="nothing_found">"Ничего не нашлось"</string>
    <string name="something_wrong">"Проблема со связью" \n\n"Загрузка не удалась. Проверьте подключение к интернету"</string>
    <string name="refresh_button">"Обновить"</string>
    <string name="search_history">Вы искали</string>
    <string name="cleaner_history">Очистить историю</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="track_time">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre">Жанр</string>
    <string name="country_player">Страна</string>
    <string name="blank_media">Ваша медиатека пуста</string>
    <string name="blank_playlist">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="media_playlists">Плейлисты</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="create_playlist">Создать</string>
    <string name="content_desc">Название</string>
    <string name="field_description">Описание</string>
    <string name="field_name">Название</string>
    <string name="playlist_created">Создан</string>
    <string name="created_playlist">Playlist "%1$s" created successfully.</string>
    <string name="permission_denied">Разрешение отклонено</string>
    <string name="add_playlist">Добавить в плейлист</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны.</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <plurals name="tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
        <item quantity="two">%d трека</item>
        <item quantity="zero">%d треков</item>
    </plurals>
</resources>