<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:ignore="ExtraText">
    <TextView
        style="@style/AppNameTextStyle"
        android:text="@string/app_name" >

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding"
        android:paddingTop="24dp"
        >
        <Button
            style="@style/MainButtonStyle"
            android:id="@+id/buttonSearch"
            android:text="@string/main_search"
            app:icon="@drawable/button_search" />

        <Button
            style="@style/MainButtonStyle"
            android:id="@+id/buttonMedia"
            android:text="@string/main_media"
            app:icon="@drawable/button_media" />

        <Button
            style="@style/MainButtonStyle"
            android:id="@+id/buttonSettings"
            android:text="@string/main_settings"
            app:icon="@drawable/button_settings" />
    </LinearLayout>
</LinearLayout>
