<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MediaBackgroudStyle"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.settings.ui.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/medium_padding"
            android:text="@string/main_settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/medium_padding"
        android:paddingEnd="12dp"
        >

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:checked="false"
            android:text="@string/settings_themes"
            style="@style/ButtonTextStyle"
            />

        <FrameLayout
            android:id="@+id/shareButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:backgroundTint="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"

                android:src="@drawable/button_share" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:text="@string/settings_share"
                style="@style/ButtonTextStyle" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/supportButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:backgroundTint="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/button_assistant" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:text="@string/settings_help"
                style="@style/ButtonTextStyle" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/agreementButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:backgroundTint="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/button_forward" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:text="@string/settings_agreement"
                style="@style/ButtonTextStyle" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>
