<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnPrimary"
        android:padding="@dimen/medium_padding">

        <Button
            android:id="@+id/back_arrow"
            style="@style/BackButtonStyle"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_header" />

        <TextView
            android:id="@+id/tv_header"
            style="@style/AppNameTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_playlist"
            app:layout_constraintBottom_toTopOf="@+id/iv_playlist_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/back_arrow"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_playlist_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/album_cover_corner_radius"
            android:layout_marginTop="48dp"
            android:background="@drawable/playlist_cover"
            android:contentDescription="@string/content_desc"
            android:scaleType="center"
            android:src="@drawable/playlist_cover_dy"
            app:layout_constraintDimensionRatio="w, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputStyle"
            android:layout_marginTop="32dp"
            android:hint="@string/field_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_playlist_cover">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_playlist_title"
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="textShortMessage"
                android:padding="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputStyle"
            android:layout_marginTop="@dimen/medium_padding"
            android:hint="@string/field_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_playlist_desc"
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/medium_padding"
            app:layout_constraintBottom_toTopOf="@id/btn_create"
            app:layout_constraintTop_toBottomOf="@id/til_description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_padding"
            android:background="@drawable/create_playlist"
            android:enabled="false"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/create_playlist"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

