<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="24dp">

        <Button
            android:id="@+id/back"
            style="@style/BackButtonStyle"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/medium_padding"
            android:text="@string/main_search"
            style="@style/TitleTextStyle" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_padding"
        android:layout_marginEnd="@dimen/medium_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            style="@style/SearchLine"
            android:id="@+id/searchEditText"
            android:textColor="@color/black"
            android:drawableStart="@drawable/button_search"
            android:hint="@string/main_search"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/clearSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/button_delete"
            app:tint="?attr/colorOnSecondary"
            android:visibility="gone" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_nothing_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/error_message"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_result"
            android:layout_gravity="center"
            android:paddingTop="@dimen/error_message" />

        <TextView
            style="@style/ErrorTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nothing_found" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/error_message"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_internet"
            android:layout_gravity="center"
            android:paddingTop="@dimen/error_message"/>

        <TextView
            style="@style/ErrorTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/something_wrong" />
        <Button
            style="@style/RefreshButtonStyle"
            android:id="@+id/buttonRefresh"
            android:layout_gravity="center"
            android:text="@string/refresh_button" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>